--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<style>
+  #top_nav{
+    border-radius-bottomleft: 0px !important;
+    border-radius-bottomright: 0px !important;
+  }
+
+</style>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <%= express_carousel [image_path('demo/player_slug.png'), image_path('backgrounds/fm3_background.jpg')] %>
+    </div>
+  </div>
+</div>
+
+
