--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -1,9 +1,15 @@
 /*-------------------------------------------
 - body
-
+- .admin_form
 -------------------------------------------*/
 
 //------- body ---
 body{
   background-image: image-url('backgrounds/fm3_background.jpg')
+}
+
+//-------- .admin_form ----
+.admin_form{
+  background-color: rgba(0, 0, 0, .70);
+  color: rgba(255, 255, 255, .80);
 }
