--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kgr</title>
+  <link rel="alternate" type="application/rss+xml" title="Killer Green Radio RSS" href="http://simplecast.fm/podcasts/1200/rss" />
+
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
+
   <%= csrf_meta_tags %>
+
+  <%= content_for :head_info %>
 </head>
 <body>
 
