--- a/app/views/parts/_top_nav.html.erb
+++ b/app/views/parts/_top_nav.html.erb
@@ -1,36 +1,47 @@
 <div class="container">
-  <div id='top_nav' class='navbar navbar-default' role='navigation'>
-    <div class="container">
-      <div class='navbar-header'>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top_nav_body">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%#@= link_to 'Killer Green Radio!', root_path, :class => 'navbar-brand' %>
-      </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div id='top_nav' class='navbar navbar-default' role='navigation'>
+        <div class="container">
+          <div class='navbar-header'>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top_nav_body">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <%#@= link_to 'Killer Green Radio!', root_path, :class => 'navbar-brand' %>
+          </div>
 
-      <div id='top_nav_body' class='collapse navbar-collapse'>
-        <ul class='nav navbar-nav navbar-left'>
-          <!--<li classs="dropdown">-->
-          <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>-->
-          <!--<ul class="dropdown-menu">-->
-          <!--&lt;!&ndash;<li class="divider"></li>&ndash;&gt;-->
-          <!--</ul>-->
-          <!--</li>-->
+          <div id='top_nav_body' class='collapse navbar-collapse'>
+            <ul class='nav navbar-nav navbar-left'>
 
-          <li>
-            <%= link_to 'Home', root_path %>
-          </li>
-          <li>
-            <% if user_signed_in? %>
-              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-            <% else %>
-              <%= link_to 'Login', new_user_session_path %>
-            <% end %>
-          </li>
-        </ul>
+
+              <li>
+                <%= link_to 'Home', root_path %>
+              </li>
+
+              <li>
+                <%= link_to 'DJs', djs_path %>
+              </li>
+
+              <li classs="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <!--<li class="divider"></li>-->
+                </ul>
+              </li>
+
+              <li>
+                <% if user_signed_in? %>
+                  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+                <% else %>
+                  <%= link_to 'Login', new_user_session_path %>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
