--- a/app/views/djs/show.html.erb
+++ b/app/views/djs/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @dj.name %>
@@ -21,8 +19,8 @@
 </p>
 
 <p>
-  <strong>Headshot:</strong>
-  <%= @dj.headshot %>
+  <strong>Head shot:</strong>
+  <%= @dj.head_shot %>
 </p>
 
 <p>
