--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -1,5 +1,8 @@
 $font_dark: black;
 
+$link_color: rgb(255, 204, 0);;
 $link_hover_color: green;
 
 $accent_light: white;
+
+$content_block_color: rgba(0, 0, 0, .70);
