--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -1,5 +1,6 @@
 /*-------------------------------------------------
 - Slider
+- .block_list
 -------------------------------------------------*/
 
 //----------- Slider ----
@@ -12,3 +13,71 @@
 //    height: 300px;
 //  }
 }
+
+//----------- .block_list -----
+.block_list{
+  //----- Layout ----
+
+  .list_row{
+//    margin-bottom: 40px;
+  }
+
+  .list_col{
+    margin-bottom: 20px;
+  }
+
+  .list_item{
+    display: table;
+
+    .image_cell{
+      display: table-cell;
+    }
+
+    .info_cell{
+      display: table-cell;
+      vertical-align: top;
+    }
+
+    //------ item components ----
+
+    img.featured_image{
+      margin-right: 10px;
+//      float: left;
+      width: 140px;
+      height: 180px;
+      border: 3px solid $accent_light;
+    }
+
+    .info{
+      padding-left: 10px;
+
+
+      .title{
+        @include title_font;
+
+        margin-bottom: 10px;
+      }
+
+      .tag_line{
+        @include tag_line_font;
+        margin-bottom: 10px;
+      }
+
+      hr{
+        border-color: $content_block_color;
+      }
+
+      .description{
+        color: $accent_light;
+      }
+
+      .social_networking_links{
+
+        img{
+          padding-left: 5px;
+          padding-right: 5px;
+        }
+      }
+    } // .info
+  } // .list_item
+} // .block_list
