--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -1,7 +1,10 @@
 /*-------------------------------------------
+- Imports
 - body
 - .admin_form
 -------------------------------------------*/
+//------ Imports ---
+@import 'text_blocks';
 
 //------- body ---
 body{
@@ -10,6 +13,6 @@ body{
 
 //-------- .admin_form ----
 .admin_form{
-  background-color: rgba(0, 0, 0, .70);
+  background-color: $content_block_color;
   color: rgba(255, 255, 255, .80);
 }
