--- a/app/views/djs/_form.html.erb
+++ b/app/views/djs/_form.html.erb
@@ -12,12 +12,19 @@
         <%= f.text_field :name, class: 'form-control' %>
       </div>
     </div><!-- col -->
+
+    <div class="col-sm-8">
+      <div class="form-group">
+        <%= f.label :tag_line, class: 'control-label' %>
+        <%= f.text_field :tag_line, class: 'form-control' %>
+      </div>
+    </div>
   </div><!-- row -->
 
   <div class="row">
     <div class="col-sm-12">
       <div class="form-group">
-        <%= f.label :bio, class: 'control-label' %>
+        <%= f.label :bio, 'Full bio', class: 'control-label' %><small> this will appear on the DJs page</small>
         <%= f.bootsy_area :bio, class: 'form-control' %>
       </div>
     </div><!-- col -->
@@ -26,7 +33,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="form-group">
-        <%= f.label :short_bio, class: 'control-label' %>
+        <%= f.label :short_bio, class: 'control-label' %><small> this will appear on the list of DJs</small>
         <%= f.text_field :short_bio, class: 'form-control' %>
       </div>
     </div>
@@ -36,22 +43,52 @@
     <div class="col-sm-12">
       <div class="form-group">
         <%= f.label :keywords, class: 'control-label' %><small> separate with commas</small>
-        <%= f.text_area :keywords, class: 'form-control' %>
+        <%= f.text_field :keywords, class: 'form-control' %>
       </div>
     </div>
   </div>
 
-  <%= image_select(f, :)
-  
-  <div class="form-group">
-    <%= f.label :headshot %>
-    <%= f.text_field :headshot %>
+  <%= image_select(f, :head_shot, version: :small) %><!-- row -->
+
+  <%= image_select(f, :slider_image, version: :small) %><!-- row -->
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="form-group">
+        <%= f.label :email, class: 'control-label' %>
+        <%= f.text_field :email, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+
+    <div class="col-sm-4">
+      <div class="form-group">
+        <%= f.label :facebook_url, class: 'control-label' %>
+        <%= f.text_field :facebook_url, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+
+    <div class="col-sm-4">
+      <div class="form-group">
+        <%= f.label :twitter_url, class: 'control-label' %>
+        <%= f.text_field :twitter_url, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+  </div><!-- row -->
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="form-group">
+        <%= f.label :phone, class: 'control-label' %><small> this will not appear on public-facing pages</small>
+        <%= f.phone_field :phone, class: 'form-control' %>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <%= f.label :slider_image %>
-    <%= f.text_field :slider_image %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="form-group">
+        <%= f.submit class: 'btn btn-primary' %>
+      </div>
+    </div><!-- col -->
+  </div><!-- row -->
 <% end %>
