--- a/app/views/djs/edit.html.erb
+++ b/app/views/djs/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Dj</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @dj %> |
-<%= link_to 'Back', djs_path %>
+<div id="edit_dj" class="admin_form container">
+  <h1>Edit <%= link_to @dj.name, @dj %></h1>
+  <%= render 'form' %>
+</div>
