--- a/app/views/parts/_top_nav.html.erb
+++ b/app/views/parts/_top_nav.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div id='top_nav' class='navbar navbar-default' role='navigation'>
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+      <div id='top_nav' class='navbar navbar-default navbar-fixed-top' role='navigation'>
         <div class="container">
           <div class='navbar-header'>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top_nav_body">
@@ -10,11 +10,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <%#@= link_to 'Killer Green Radio!', root_path, :class => 'navbar-brand' %>
+            <%= link_to 'Killer Green Radio!', root_path, :class => 'navbar-brand' %>
           </div>
 
           <div id='top_nav_body' class='collapse navbar-collapse'>
-            <ul class='nav navbar-nav navbar-left'>
+            <ul class='nav navbar-nav navbar-right'>
 
 
               <li>
@@ -43,6 +43,18 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<script>
+  function padBodyForTopNav(){
+    $('body').css('padding-top', $('#top_nav').height() + 1);
+
+    $(window).resize(function(){
+      $('body').css('padding-top', $('#top_nav').height() + 1);
+    })
+  }
+
+  padBodyForTopNav();
+</script>
