--- a/app/views/djs/_form.html.erb
+++ b/app/views/djs/_form.html.erb
@@ -48,9 +48,14 @@
     </div>
   </div>
 
-  <%= image_select(f, :head_shot, version: :small) %><!-- row -->
+  <div class="well">
+    <%= image_select(f, :head_shot, version: :small) %><!-- row -->
+  </div>
 
-  <%= image_select(f, :slider_image, version: :small) %><!-- row -->
+  <div class="well">
+    <%= image_select(f, :slider_image, version: :small) %><!-- row -->
+  </div>
+
 
   <div class="row">
     <div class="col-sm-4">
