--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,12 +13,22 @@
       </div>
     </div><!-- col -->
 
-    <div class="col-sm-8">
+    <div class="col-sm-4">
       <div class="form-group">
-        <%= f.label :start_time, 'Starts', :class => 'control-label' %>
-        <%= f.text_field :start_time, :class => 'datetimepicker form-control' %>
+        <%= f.label :start_time, :class => 'control-label' %>
+
+        <div class="input-group datetimepicker">
+          <%= f.text_field :start_time, :class => 'form-control' %>
+          <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+          </span>
+        </div>
+
+
       </div>
     </div>
+
+    <div class="col-sm-4"></div><!-- col -->
   </div><!-- row -->
 
   <div class="row">
@@ -39,10 +49,16 @@
     </div><!-- col -->
   </div><!-- row -->
 
-  <%= image_select f, :main_image, :version => :small %><!-- row -->
+  <div class="well">
+    <%= image_select f, :main_image, :version => :small %><!-- row -->
+  </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="form-group">
+        <%= f.submit class: 'btn btn-primary' %>
+      </div>
+    </div>
   </div>
 <% end %>
 
