--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Event</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+<div id="edit_event" class="admin_form container">
+  <h1>Create Event</h1>
+  <%= render 'form' %>
+</div>
