--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Event</h1>
+<div id="new_event" class="admin_form container">
+  <h1>Create Event</h1>
+  <%= render 'form' %>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', events_path %>
