Calendar Styles and Functions

--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -1,8 +1,10 @@
 $font_dark: black;
+$font_medium: grey;
+$font_light: white;
 
 $link_color: rgb(255, 204, 0);;
 $link_hover_color: green;
 
-$accent_light: white;
+$content_block_color: rgba($font_dark, .70);
 
-$content_block_color: rgba(0, 0, 0, .70);
+$bright_accent: #db2754;
