--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -18,7 +18,7 @@
 @mixin tag_line_font{
   font-size: 16px;
   font-weight: 600;
-  color: $accent_light;
+  color: $font_light;
 }
 
 //------ Links -----
