--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -45,7 +45,7 @@
 //      float: left;
       width: 140px;
       height: 180px;
-      border: 3px solid $accent_light;
+      border: 3px solid $font_light;
     }
 
     .info{
@@ -68,7 +68,7 @@
       }
 
       .description{
-        color: $accent_light;
+        color: $font_light;
       }
 
       .social_networking_links{
