--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,19 +5,19 @@
   <%= render partial: 'parts/head' %>
 </head>
 <body>
+  <%= render partial: 'parts/top_nav' %>
 
   <%= render partial: 'parts/header' %>
-  <%= render partial: 'parts/top_nav' %>
   <%= render partial: 'parts/the_flash' %>
 
   <div class="container" id="content_container">
     <div class="row">
-      <div class="col-md-9" id="main_content">
+      <div class="col-md-8" id="main_content">
         <%= yield %>
       </div><!-- main_content -->
 
-      <div class="col-md-3" id="side_content">
-        <span width="260px">xxxdaffffffffffffffff</span>
+      <div class="col-md-4" id="side_content">
+        <%= content_for :side_bar %>
       </div><!-- side_content -->
     </div><!-- content row -->
   </div><!-- content_container -->
