--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   <%= render partial: 'parts/header' %>
   <%= render partial: 'parts/the_flash' %>
 
+  <%= content_for :top_banner %>
+
   <div class="container" id="content_container">
     <div class="row">
       <div class="col-md-8" id="main_content">
