--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -44,7 +44,7 @@
     <div class="col-sm-12">
       <div class="form-group">
         <%= f.label :keywords, class: 'control-label' %>
-        <%= f.text_area :keywords, class: 'form-control' %>
+        <%= f.text_field :keywords, class: 'form-control' %>
       </div>
     </div><!-- col -->
   </div><!-- row -->
@@ -52,6 +52,18 @@
   <div class="well">
     <%= image_select f, :main_image, :version => :small %><!-- row -->
   </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="form-group">
+        <%= f.label :facebook_event_link, class: 'control-label' %>
+        <%= f.text_field :facebook_event_link, class: 'form-control' %>
+      </div>
+    </div><!-- col -->
+
+    <div class="col-sm-4"></div><!-- col -->
+    <div class="col-sm-4"></div><!-- col -->
+  </div><!-- row -->
 
   <div class="row">
     <div class="col-sm-12">
