--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -11,8 +11,8 @@ body{
   background-image: image-url('backgrounds/fm3_background.jpg')
 }
 
-//-------- .admin_form ----
-.admin_form{
+//-------- .content_block ----
+.content_block {
   background-color: $content_block_color;
   color: rgba(255, 255, 255, .80);
 }
