--- a/app/assets/stylesheets/partials/_text_blocks.scss
+++ b/app/assets/stylesheets/partials/_text_blocks.scss
@@ -15,6 +15,13 @@ h3{
   border-bottom: 2px solid $content_block_color;
 }
 
+h4{
+  font-size: 36px;
+  color: $font_light;
+  font-weight: 600;
+  border-bottom: 1px solid $content_block_color;
+}
+
 //h3{
 //  letter-spacing: 0.01em;
 //  font-weight: 600;
