--- a/app/views/djs/new.html.erb
+++ b/app/views/djs/new.html.erb
@@ -1,4 +1,4 @@
-<div id="new_dj" class="dj_form admin_form container">
+<div id="new_dj" class="dj_form content_block container">
   <h1>Add a New DJ</h1>
   <%= render 'form' %>
-</div>d
+</div>
