--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<div id="edit_event" class="admin_form container">
+<div id="edit_event" class="content_block container">
   <h1>Create Event</h1>
   <%= render 'form' %>
 </div>
