--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,22 +13,20 @@
       </div>
     </div><!-- col -->
 
-    <div class="col-sm-4">
+    <div class="col-sm-8">
       <div class="form-group">
-        <%= f.label :start_time, :class => 'control-label' %>
-
-        <div class="input-group datetimepicker">
-          <%= f.text_field :start_time, :class => 'form-control' %>
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-calendar"></span>
-          </span>
-        </div>
-
-
+        <%= f.label :start_time, :class => 'control-label' %><br>
+        <%= f.datetime_select :start_time, :class => 'form-control' %>
+        <!--<div class="input-group datetimepicker">-->
+          <%#= f.text_field :start_time, :class => 'form-control'%>
+          <!--<span class="input-group-addon">-->
+            <!--<span class="glyphicon glyphicon-calendar"></span>-->
+          <!--</span>-->
+        <!--</div>-->
       </div>
     </div>
 
-    <div class="col-sm-4"></div><!-- col -->
+    <!--<div class="col-sm-4"></div>&lt;!&ndash; col &ndash;&gt;-->
   </div><!-- row -->
 
   <div class="row">
@@ -55,15 +53,39 @@
 
   <div class="row">
     <div class="col-sm-4">
+      <h4>Location</h4>
+      <%= render :partial => 'addresses/form', :locals => {:form_builder => f} %>
+    </div><!-- col -->
+
+    <div class="col-sm-4">
+      <div class="form_group">
+        <h4>DJs Attending</h4>
+        <% @djs.each_with_index do |dj, i| -%>
+          <div class="checkbox">
+            <label for="event_djs_attending_<%= i %>">
+              <%= check_box_tag "event[djs_attending][]", dj.to_param, (:checked if @event.djs_attending.include?(dj.to_param)),
+                                                          :id => "event_djs_attending_#{i}"%>
+              <%= dj.name %>
+            </label>
+          </div>
+        <% end -%>
+      </div>
+    </div><!-- col -->
+
+    <div class="col-sm-4">
+      <h4>Options</h4>
       <div class="form-group">
         <%= f.label :facebook_event_link, class: 'control-label' %>
         <%= f.text_field :facebook_event_link, class: 'form-control' %>
       </div>
     </div><!-- col -->
 
-    <div class="col-sm-4"></div><!-- col -->
-    <div class="col-sm-4"></div><!-- col -->
+
+
+
+
   </div><!-- row -->
+
 
   <div class="row">
     <div class="col-sm-12">
