--- a/app/views/news_stories/new.html.erb
+++ b/app/views/news_stories/new.html.erb
@@ -1,4 +1,4 @@
-<div id="new_news_story" class="content_block">
+<div id="new_news_story" class="content_block container">
   <h1>
     New News Story
   </h1>
