--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,8 @@
 
 </style>
 
-
+<% head_info('Killer Green Radio', 'Killer Green Radio Home Page', image_url('logos/header_logo.png'),
+             'music.radio_station', 'killergreenradio.com', root_url, :facebook_app_id => FB_APP_ID) %>
 
 <% content_for :top_banner do %>
   <div class="container">
