--- a/app/assets/stylesheets/modules/_colors.scss
+++ b/app/assets/stylesheets/modules/_colors.scss
@@ -1,6 +1,8 @@
 $font_dark: black;
 $font_medium: grey;
 $font_light: white;
+$font_medium_light: rgba(0, 0, 0, 0.27);
+
 
 $link_color: rgb(255, 204, 0);;
 $link_hover_color: green;
