--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -1,6 +1,8 @@
 /*-------------------------------------------------
 - Slider
 - .block_list
+- .article
+- .social_networking_links
 -------------------------------------------------*/
 
 //----------- Slider ----
@@ -73,13 +75,38 @@
         color: $font_light;
       }
 
-      .social_networking_links{
-
-        img{
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
     } // .info
   } // .list_item
 } // .block_list
+
+.article{
+  .article_content{
+//    color: $font_medium_light;
+    color: rgb(158, 158, 158);
+    font-size: 18px;
+    font-family: $font-family-serif;
+    background-color: $content_block_color;
+    padding: 10px;
+    border-radius: 5px;
+
+    br{
+      line-height: 36px;
+    }
+
+
+  } // .article_content
+
+
+  .head_shot{
+    margin-right: 20px;
+//    margin-bottom: 10px;
+  }
+} // .article
+
+
+.social_networking_links{
+  img{
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
