--- a/app/views/parts/_head.html.erb
+++ b/app/views/parts/_head.html.erb
@@ -1,6 +1,9 @@
+<link rel="alternate" type="application/rss+xml" title="Killer Green Radio RSS" href="http://simplecast.fm/podcasts/1200/rss" />
 
 <%= stylesheet_link_tag    'application', media: 'all' %>
 <%= javascript_include_tag 'application' %>
+
+<%= facebook_sdk FB_APP_ID %>
 
 <%= csrf_meta_tags %>
 
