--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,3 +11,9 @@
   </div>
 <% end %>
 
+<% content_for :side_bar do %>
+  <%= render :partial => 'events/embedded_monthly' %>
+
+  <%#= render :partial => 'devise/sessions/new' %>
+<% end %>
+
