--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,29 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @event.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @event.description %>
-</p>
-
-<p>
-  <strong>Keywords:</strong>
-  <%= @event.keywords %>
-</p>
-
-<p>
-  <strong>Start time:</strong>
-  <%= @event.start_time %>
-</p>
-
-<p>
-  <strong>Main image:</strong>
-  <%= @event.main_image %>
-</p>
-
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%# head_info(@event.name, @event.description, ) %>
