--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
 <div id="edit_event" class="content_block container">
-  <h1>Create Event</h1>
+  <h1>Edit <%= link_to @event.name, @event %></h1>
   <%= render 'form' %>
 </div>
