--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -102,6 +102,10 @@
     margin-right: 20px;
 //    margin-bottom: 10px;
   }
+
+  .article_banner_image{
+    width: 100%;
+  }
 } // .article
 
 .article_list{
