--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -8,7 +8,8 @@
 
 //------- body ---
 body{
-  background-image: image-url('backgrounds/fm3_background.jpg')
+  background-color: #0e4e00;
+//  background-image: image-url('backgrounds/fm3_background.jpg')
 }
 
 //-------- .content_block ----
