--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -11,9 +11,12 @@
   margin-bottom: 10px;
 
   .logo_col{
+    padding-top: 15px;
+
     img{
       height: 150px;
       position: relative;
+
     }
 
     img:hover{
