--- a/app/assets/stylesheets/partials/_text_blocks.scss
+++ b/app/assets/stylesheets/partials/_text_blocks.scss
@@ -22,6 +22,12 @@ h4{
   border-bottom: 1px solid $content_block_color;
 }
 
+h5{
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 0px;
+}
+
 //h3{
 //  letter-spacing: 0.01em;
 //  font-weight: 600;
