--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
+<h3>Stories and news</h3>
+<%= render partial: 'news_stories/list' %>
 
 
-<div id="news_stories" class="article_list">
-  <% @news_stories.each do |n| -%>
 
-  <% end -%>
-</div>
+
 
 
 <% head_info('Killer Green Radio', 'Killer Green Radio Home Page', image_url('logos/header_logo.png'),
