--- a/app/views/parts/_header.html.erb
+++ b/app/views/parts/_header.html.erb
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-4 logo_col">
       <%= link_to root_path do %>
-        <%= image_tag 'logos/header_logo.png', alt: 'Killer Green Radio' %>
+        <%= image_tag 'logos/radio_flag_small.png', alt: 'Killer Green Radio' %>
       <% end %>
     </div><!-- col -->
     <div class="col-sm-4 podcast_col">
