--- a/app/assets/stylesheets/partials/_globals.scss
+++ b/app/assets/stylesheets/partials/_globals.scss
@@ -8,12 +8,16 @@
 
 //------- body ---
 body{
-  background-color: #0e4e00;
-//  background-image: image-url('backgrounds/fm3_background.jpg')
+//  background-color: #0e4e00;
+  background-image: image-url('backgrounds/fm3_background.jpg')
 }
 
 //-------- .content_block ----
 .content_block {
+  color: $font_medium_light;
+  font-size: 18px;
+  font-family: $font-family-serif;
   background-color: $content_block_color;
-  color: rgba(255, 255, 255, .80);
+  padding: 10px;
+  border-radius: 5px;
 }
