--- a/app/views/djs/index.html.erb
+++ b/app/views/djs/index.html.erb
@@ -7,7 +7,7 @@
       <% dj_group.each do |dj| %>
         <div class="col-md-6 list_col">
           <% if dj -%>
-            <div class="list_item">
+            <div class="list_item article">
               <div class="image_cell">
                 <%= image_tag dj.head_shot.url(:medium), class: 'featured_image' %>
               </div>
