--- a/app/views/events/_embedded_monthly.html.erb
+++ b/app/views/events/_embedded_monthly.html.erb
@@ -1,5 +1,5 @@
 <div id="embedded_monthly_widget">
-  <h3>Events!</h3>
+  <h3>Events <%= link_to 'Full calendar', events_path, class: 'btn btn-text btn-xs' %></h3>
   <div class="calendar_body">
     <%= month_calendar(events: @calendar_events) do |date, events| %>
       <%= content_tag :div, class: "calendar_date#{' has_event' if events.count > 0}" do %>
