--- a/app/views/parts/_top_nav.html.erb
+++ b/app/views/parts/_top_nav.html.erb
@@ -25,6 +25,10 @@
                 <%= link_to 'DJs', djs_path %>
               </li>
 
+              <li>
+                <%= link_to 'Events', events_path %>
+              </li>
+
               <li classs="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                 <ul class="dropdown-menu">
