--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,7 @@
       </div><!-- side_content -->
     </div><!-- content row -->
   </div><!-- content_container -->
+
+  <%= render partial: 'parts/footer' %>
 </body>
 </html>
