--- a/app/assets/stylesheets/partials/_parts.scss
+++ b/app/assets/stylesheets/partials/_parts.scss
@@ -2,6 +2,7 @@
 - #header
 - #top_nav
 - The Flash
+- #footer
 
 -------------------------------------------------*/
 
@@ -40,3 +41,9 @@ div.flash.alert{
 }
 
 //------ #the_flash -----
+
+//----- #footer ------
+#footer{
+  min-height: 300px;
+  background-color: $content_block_color;
+}
