--- a/app/views/news_stories/index.html.erb
+++ b/app/views/news_stories/index.html.erb
@@ -1,25 +1,16 @@
-<div class="content_block container">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Status</th>
-        <th>Excerpt</th>
-        <th>Main Image</th>
-        <th></th>
-      </tr>
-    </thead>
+<div id="news_stories">
+  <%= quick_options ['New', new_news_story_path] if user_is_admin? %>
 
-    <tbody>
-      <% @news_stories.each do |ns| -%>
-        <tr>
-          <td><%= link_to ns.title, edit_news_story_path(ns) %></td>
-          <td><%= ns.publication_status.titlecase %></td>
-          <td><%= ns.excerpt.to_s %></td>
-          <td><%= image_tag ns.main_news_story_image.url(:thumb) %></td>
-          <td><%= link_to 'view', ns, target: '_blank' %></td>
-        </tr>
-      <% end -%>
-    </tbody>
-  </table>
+  <h1>News Stories</h1>
+
+  <!--<div class="content_block">-->
+    <%= render partial: 'list' %>
+  <!--</div>-->
 </div>
+
+<% content_for :side_bar do %>
+  <%= render :partial => 'events/embedded_monthly' %>
+<% end %>
+
+<% head_info('News Stories for Killer Green Radio', 'News Stories for Killer Green Radio', standard_image, 'article', 'killergreenradio.com',
+             news_stories_url, keywords: standard_keywords) %>
