--- a/app/views/parts/_top_nav.html.erb
+++ b/app/views/parts/_top_nav.html.erb
@@ -22,6 +22,10 @@
               </li>
 
               <li>
+                <%= link_to 'News', news_stories_path %>
+              </li>
+
+              <li>
                 <%= link_to 'DJs', djs_path %>
               </li>
 
@@ -29,12 +33,14 @@
                 <%= link_to 'Events', events_path %>
               </li>
 
-              <li classs="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <!--<li class="divider"></li>-->
-                </ul>
-              </li>
+              <% if user_is_admin? %>
+                <li classs="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <!--<li class="divider"></li>-->
+                  </ul>
+                </li>
+              <% end %>
 
               <li>
                 <% if user_signed_in? %>
